2008-08-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl (::tooltip::tagTip): Cancel outstanding after events
	on tags when setting a new one to avoid visual glitches when
	moving the cursor across a set of tags (ie: tkchat userlist)

2008-07-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump to 1.4.2. [Bug 2015992]
	* tooltip.tcl (::tooltip::enableTag, ::tooltip::enableCanvas):
	Protect bind enablers to only add themselves once.

2008-03-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: bump to 1.4.1
	* tooltip.tcl (::tooltip::show): check window exists before any
	other ops. [Bug 1879622]

2007-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::clear): Withdraw the tooltip if we clear
	the current contained item. [Bug 1547729]

	* tooltip.tcl: added fading (default on for Win32/Aqua) of tooltip
	* tooltip.man: instead of just withdraw. [Bug 1641071]

2007-09-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl (::tooltip::show): Left align the tooltip text
	* pkgIndex.tcl:                  (reported by Peter Caffin)
	* tooltip.man:                   Bumped to 1.4
	Generally improved the manual to fix bug #1800296.

2007-05-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.man, pkgIndex.tcl: bumped version to 1.3
	* tooltip.tcl (::tooltip::show): Use late-binding msgcat (lazy
	translation) to support programs that allow on-the-fly l10n
	changes.  Requires msgcat package (Tk uses this already). (poser)

2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tooltip.tcl:  Added support for tooltips on text widget tags
	                (useful for tkchat url links). Fixed menu tooltips.
	* tooltip.man:  Added documentation.
	* pkgIndex.tcl: Incremented version to 1.2

2006-08-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tooltip.tcl (::tooltip::show): better handle boundary case
	considering Tk's odd multi-monitor screen dimension handling.
	AS bug 48498.
