@@ -1,3 +1,9 @@
+2008-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tooltip.tcl:  Added support for listbox items.
+	* tooltip.man:
+	* pkgIndex.tcl: Incremented to 1.4.3
+
 2008-08-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tooltip.tcl (::tooltip::tagTip): Cancel outstanding after events
